--- a/P009636.opf/layers/v001/Pagination.yml
+++ b/P009636.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 937c31bff33b4ac6a96124f48500798b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7dc5b448860e4922879c24323124d519:
