--- a/P009636.opf/meta.yml
+++ b/P009636.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009636
 initial_creation_type: ocr
 created_at: 31/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 20:42:09.033224
 source_metadata:
   id: bdr:W25219
   title: སངས་རྒྱས་ཀྱི་བསྟན་པ་རིན་པོ་ཆེའི་སྙིང་པོའི་བསྡུས་དོན་ཕན་བདེའི་འོད་སྣང
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 194
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: false
